--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,29 +3,32 @@
     package="com.example.toanvu.duan1_hoanthien">
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="src.activity.ManHinhCho">
+        <activity android:name=".activity.ManHinhCho"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="src.activity.LoginAcivity" />
-        <activity android:name="src.activity.MainActivity" />
-        <activity android:name="src.add.ThemCauThuNoiBat" />
-        <activity android:name="src.add.ThemBanQuanLy" />
-        <activity android:name="src.add.ThemCauThu" />
-        <activity android:name="src.add.ThemDoiHinhPhu" />
-        <activity android:name="src.add.ThemDoiHinhChinh" />
-        <activity android:name="src.details.DetailCauThuNoiBat" />
-        <activity android:name="src.edit.EditCauThuNoiBat" />
-        <activity android:name="src.edit.EditBanQuanLy"></activity>
+        <activity android:name=".activity.LoginAcivity" />
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".add.ThemCauThuNoiBat" />
+        <activity android:name=".add.ThemBanQuanLy" />
+        <activity android:name=".add.ThemCauThu" />
+        <activity android:name=".add.ThemDoiHinhPhu" />
+        <activity android:name=".add.ThemDoiHinhChinh" />
+        <activity android:name=".details.DetailCauThuNoiBat" />
+        <activity android:name=".edit.EditCauThuNoiBat" />
+        <activity android:name=".edit.EditBanQuanLy"></activity>
+
     </application>
 
 </manifest>
