--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,14 @@
     package="com.toankieu.toanvu.duan1_hoanthien">
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.activity.ManHinhChoActivity"
+        <activity
+            android:name=".activity.ManHinhChoActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,17 +18,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.activity.LoginAcivity" />
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.activity.MainActivity" />
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.add.ThemCauThuNoiBat" />
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.add.ThemBanQuanLy" />
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.add.ThemCauThu" />
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.add.ThemDoiHinhPhu" />
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.add.ThemDoiHinhChinh" />
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.details.DetailCauThuNoiBat" />
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.edit.EditCauThuNoiBat" />
-        <activity android:name="com.toankieu.toanvu.duan1_hoanthien.edit.EditBanQuanLy"></activity>
-
+        <activity android:name=".activity.LoginAcivity" />
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".add.ThemCauThuNoiBat" />
+        <activity android:name=".add.ThemBanQuanLy" />
+        <activity android:name=".add.ThemCauThu" />
+        <activity android:name=".add.ThemDoiHinhPhu" />
+        <activity android:name=".add.ThemDoiHinhChinh" />
+        <activity android:name=".details.DetailCauThuNoiBat" />
+        <activity android:name=".edit.EditCauThuNoiBat" />
+        <activity android:name=".edit.EditBanQuanLy" />
+        <activity android:name=".edit.EditCauThu" />
+        <activity android:name=".details.DetailsCauThu" />
+        <activity android:name=".edit.EditDoiHinhChinh" />
+        <activity android:name=".edit.EditDoiHinhPhu"></activity>
     </application>
 
 </manifest>
